# vizier

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: crates_io.rs  lib.rs  main.rs
src/analyzer/: dependency.rs
src/app/: state.rs
src/config/: mod.rs  settings.rs
src/error/: mod.rs
src/ui/: dependency_view.rs  mod.rs  search.rs  splash.rs  tokens.rs
src/ui/app/: header.rs  list.rs  mod.rs  overlays.rs  right_panel.rs  status.rs
src/ui/theme/: mod.rs
