[package]
name = "vizier-tui"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "Blazing-fast Rust Code Inspector for the Terminal"
license = "MIT"
authors = ["yashksaini-coder <yashksaini89@gmail.com>"]
keywords = ["tui", "inspector", "rust", "analyzer", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/yashksaini-coder/vizier"
homepage = "https://github.com/yashksaini-coder/vizier"
documentation = "https://docs.rs/vizier_tui"
readme = "README.md"

[package.metadata.cargo-machete]
# reqwest with "blocking" can pull in tokio; we use blocking client only, no direct tokio API
ignored = ["tokio"]

[[bin]]
name = "vizier"
path = "src/main.rs"

[lib]
name = "vizier_lib"
path = "src/lib.rs"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Code Parsing & Analysis
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# Cargo/Crate utilities  
cargo_metadata = "0.19"
toml = "0.8"

# HTTP Client for crates.io (blocking for background fetch thread)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Configuration & Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error Handling
anyhow = "1"
thiserror = "2"

# Fuzzy Finding
fuzzy-matcher = "0.3"

# Utilities
unicode-width = "0.2"
dirs = "6"
webbrowser = "0.8"
dotenvy = "0.15"

# Dependency graph visualization
petgraph = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
